--- a/hugo.yaml
+++ b/hugo.yaml
@@ -44,7 +44,7 @@ permalinks:
 params:
     mainSections:
         - kubernetes
-        - post
+        # - post
     featuredImageField: image
     rssFullContent: true
     favicon: # e.g.: favicon placed in `static/favicon.ico` of your site folder, then set this field to `/favicon.ico` (`/` is necessary)
